--- a/tasks.json
+++ b/tasks.json
@@ -3,16 +3,11 @@
     {
       "chapter_id": 3,
       "id": "c1d76816-4836-425b-a6b9-78febaa08334",
-      "task": "fdjhbvdfhjvnn"
-    },
-    {
-      "id": "b054c4a1-6f73-4b0f-b481-a5e4d4a33226",
-      "task": "fvfnnvf",
-      "chapter_id": 3
+      "task": "Создание задачи с  очень длинным текстом описания в несколько строк, заполняющую примерно половину всей высоты столбца "
     },
     {
       "id": "ba380990-ae03-4e5e-98c9-bf3caab4d219",
-      "task": "nnnn",
+      "task": "Создание задачи с  очень длинным текстом описания в несколько строк, заполняющую примерно половину всей высоты столбца ",
       "chapter_id": 5
     }
   ]
