--- a/tasks.json
+++ b/tasks.json
@@ -1,14 +1,13 @@
 {
   "tasks": [
     {
-      "chapter_id": 3,
+      "chapter_id": 4,
       "id": "c1d76816-4836-425b-a6b9-78febaa08334",
-      "task": "Создание задачи с  очень длинным текстом описания в несколько строк, заполняющую примерно половину всей высоты столбца "
+      "task": "fdjhbvdfhjvnn"
     },
     {
-      "id": "ba380990-ae03-4e5e-98c9-bf3caab4d219",
-      "task": "Создание задачи с  очень длинным текстом описания в несколько строк, заполняющую примерно половину всей высоты столбца ",
-      "chapter_id": 5
+      "chapter_id": 2,
+      "id": "ba380990-ae03-4e5e-98c9-bf3caab4d219"
     }
   ]
 }
